# magtag_esp_hal

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
