[package]
edition = "2021"
name = "magtag_esp_hal_epd"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "magtag_esp_hal_epd"
path = "./src/bin/main.rs"

[dependencies]
ssd1680 = {git="https://github.com/ScottCUSA/ssd1680.git" , branch="main" }
critical-section = "1.2.0"
# ssd1680 = {path="../scottcusa/ssd1680"}
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"
embedded-io = {version="0.7.1", default-features = false}
esp-alloc = { version = "0.9.0", features = ["esp32s2"] }
esp-backtrace = { version = "0.18.0", features = ["esp32s2", "println", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32s2", "log-04"] }
esp-hal = { version = "1.0.0-rc.1", features = ["unstable","esp32s2"] }
esp-println = { version = "0.16.0", features = ["esp32s2", "log-04"] }
esp-radio = { version = "0.16.0", features = ["esp32s2", "log-04", "smoltcp", "unstable", "wifi"] }
esp-rtos = { version = "0.1.1", features = ["esp-radio", "embassy", "log-04", "esp32s2"] }
heapless = "0.9.1"
jiff = { version = "0.2.15", default-features = false, features = ["static"] }
log = "0.4.28"
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "socket-raw"] }
sntpc = { version = "0.6.1", default-features = false, features = ["embassy-socket"] }
static_cell = "2.1.1"
blocking-network-stack = { path = "blocking_network_stack"}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
debug = 2

[profile.dev.package."*"]
debug = false

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[workspace]
resolver = "3"
